tests/lexer/invalid/05_out_of_range.src
// Числа вне допустимого диапазона
2147483648      // на 1 больше максимального
-2147483649     // на 1 меньше минимального
9999999999      // очень большое